--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title></title>
-    <link rel = "stylesheet" type = "text/css" href = "css/main.css" />
+    <link rel = "stylesheet" type = "text/css" href = "main.css" />
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </style>
@@ -39,7 +39,7 @@
 
 
 
-        <script src="js/shoppingCart.js"></script>
+        <script src="shoppingCart.js"></script>
 
         <script>
             $(document).ready(function () {
